--- a/wiki.org
+++ b/wiki.org
@@ -8,17 +8,18 @@ Navi can be built from source. The following libraries are dependencies for navi
 + [[https://www.lua.org/start.html][Lua]]
 + [[https://imagemagick.org/script/magick++.php][ImageMagick (Magick++)]]
 + [[https://poppler.freedesktop.org/api/qt6/][Poppler (Poppler-Qt6)]]
++ [[https://www.freedesktop.org/wiki/Software/udisks/][Udisks]]
 
 If you're on ArchLinux you can copy paste the following =pacman= code to install these dependencies:
 
 #+begin_src bash
-sudo pacman -S qt6-base lua imagemagick poppler poppler-qt6
+sudo pacman -S qt6-base lua imagemagick poppler poppler-qt6 udisks2
 #+end_src
 
 If you're on Ubuntu/Debian based distribution, you can paste the following =apt= code to install the dependencies:
 
 #+begin_src bash
-sudo apt install qt6-base-dev lua5.4 libmagick++-dev libpoppler-dev libpoppler-cpp-dev libpoppler-qt6-dev
+sudo apt install qt6-base-dev lua5.4 libmagick++-dev libpoppler-dev libpoppler-cpp-dev libpoppler-qt6-dev udisks2
 #+end_src
 
 *NOTE*: I have not tested Navi on an Ubuntu machine. If there are any problems, please open an issue.
@@ -434,6 +435,12 @@ Sorts the directory by /size/ in *ascending order* with the directories listed f
 **** sort-size-desc
 
 Sorts the directory by /size/ in *descending order* with the directories listed first.
+
+*** Storage Device
+
+**** drives
+
+Opens a dialog with all the drives (mounted and unmounted). You can double click on a drive to mount (or load it if it's already mounted).
 
 ** Linux Only
 
